# acme_remote/api/swagger/swagger.yaml
@@ -144,6 +144,38 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /blacklists:
+    x-swagger-router-controller: blacklists
+    get:
+      description: Returns a collection
+      operationId: getBlacklisted
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/Blacklists'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Adds a costumer to the blacklist
+      operationId: addToBlacklist
+      parameters:
+        - name: blacklist
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Blacklist'
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/Blacklist'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -237,7 +269,6 @@ definitions:
     type: object
     required:
       - costumerUuid
-      - id
     properties:
       costumerUuid:
         type: string
@@ -285,8 +316,6 @@ definitions:
         items:
           $ref: '#/definitions/Request'
   Blacklists:
-    required:
-      - blacklists
     properties:
       blacklists:
         type: array
