# acme_remote/models/blacklist.js
@@ -1,9 +1,4 @@
 module.exports = function (sequelize, DataTypes) {
-    var Blacklist = sequelize.define('blacklist', {
-        timestamp: {
-            type: DataTypes.DATE,
-            allowNull: false
-        }
-    }, { tablename: 'blacklist' });
+    var Blacklist = sequelize.define('blacklist', {    }, { tablename: 'blacklist' });
     return Blacklist;
 }
